--- a/master.tex
+++ b/master.tex
@@ -11,6 +11,7 @@
 \setlength{\parindent}{0pt}
 \usepackage{refstyle}
 \usepackage{float}
+\usepackage{textcomp}
 \usepackage{mathtools}
 \usepackage{enumitem}
 \usepackage{amsmath}
@@ -4411,6 +4412,8 @@ kodierbar: Sei $\psi_{n}\left(\bar{x}\right)$ eine Formel, die prüft,
 ob $\left|A\right|=n$, und dann prüft, ob für alle $n!$ Bijektionen
 $\pi:A\rightarrow U$ gilt, dass $\mathcal{C}\left[\pi\mathfrak{A}\right]\left(\Omega\left(\pi\beta\bar{x}\right)\right)$
 mit $\beta:\mathrm{frei}\left(\psi_{n}\right)\rightarrow A$.
+
+{[}...{]}
 \end{proof}
 \pagebreak{}
 
@@ -4454,6 +4457,8 @@ Kodierung von Zahlen, so dass für $\bar{g},\bar{h},\bar{w}\in\left[0,n\right]^{
  &  & \mathrm{f\ddot{u}r}\,R/m\in\sigma,\,\bar{x}\in\left[1,n\right]^{m}
 \end{eqnarray*}
 
+
+{[}...{]}
 \end{proof}
 
 \chapter{Grenzen der Symmetrischen Schaltkreisfamilien}
@@ -4498,13 +4503,8 @@ Es existiert eine Graph-Anfrage $q$, die durch eine arb-invariante
 $\mathrm{FO}\left(\mathrm{arb}\right)$-Formel beschrieben wird, jedoch
 nicht durch $\mathrm{FO}+\mathbf{ARB}$ definierbar ist.\end{lem}
 \begin{proof}
-Es sei 
+Es sei {[}...{]}
 \end{proof}
-
-\chapter{Schluss}
-
-{[}...{]}
-
 \pagebreak{}
 
 \bibliographystyle{plain}
@@ -4515,13 +4515,14 @@ Es sei
 \pagebreak{}
 
 
-\chapter*{Eidesstattliche Erklärung}
+\chapter*{Erklärung}
 
 \addcontentsline{toc}{chapter}{Eidesstattliche Erklärung}
 
-Hiermit versichere ich an Eides statt, dass ich den Inhalt der vorliegenden
-Arbeit selbständig ohne fremde Hilfe angefertigt und nur die angegebenen
-Hilfsmittel verwendet habe.
+Gemäß der Ordnung für den Masterstudiengang Informatik, § 24 Abs.
+12 bestätige ich hiermit, dass ich die vorliegende Arbeit selbständig
+ohne fremde Hilfe angefertigt und nur die angegebenen Hilfsmittel
+verwendet habe.
 
 \vspace{2em}
 
