--- a/master.lyx
+++ b/master.lyx
@@ -17317,7 +17317,7 @@ status open
 
 
 \backslash
-addcontentsline{toc}{chapter}{Eidesstattliche Erklärung}
+addcontentsline{toc}{chapter}{Erklärung}
 \end_layout
 
 \end_inset
