--- a/master.tex
+++ b/master.tex
@@ -4517,7 +4517,7 @@ Es sei {[}...{]}
 
 \chapter*{Erklärung}
 
-\addcontentsline{toc}{chapter}{Eidesstattliche Erklärung}
+\addcontentsline{toc}{chapter}{Erklärung}
 
 Gemäß der Ordnung für den Masterstudiengang Informatik, § 24 Abs.
 12 bestätige ich hiermit, dass ich die vorliegende Arbeit selbständig
